feat[body]: Added new <div> elements to enable flex displays for the elements of the page. The style.css was updated to implement this

--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
 </head>
 
 <body>
+
+    <div class="navigate">
+        <p>Navigation area</p>
+    </div>
+
+    <div class="body">
+        <div class="introduction">
+            <p>Introduction area</p>
+        </div>
+
+        <div class="main-content">
+            <p>Content area</p>
+        </div>
+    </div>
+    
+
+
     <section id="introduction">
         <!--This is the introduction page-->
         <h2>Introduction</h2>
