feat[div]: Renamed IDs for flexbox divs to simplify coding. The style guide was also changed to reflect this.

--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
 
 <body>
 
-    <div class="navigate">
+    <div class="nav">
         <p>Navigation area</p>
 
+        <!-- Add CSS-styled logo -->
+        <img src="box.jpeg" alt="Profile page logo" width="40">
+
         <!-- Navigation links -->
-        <h2>Learn more about me here:</h2>
-        <p><a href="summary.html" target="_self">My career summary</a></p>
-        <p><a href="qualifications.html" target="_self">My qualifications and education</a></p>
-        <p><a href="interests.html" target="_self">My perosnal interests</a></p>
+        <a href="summary.html" target="_self">My career summary</a>
+        <a href="qualifications.html" target="_self">My qualifications and education</a>
+        <a href="interests.html" target="_self">My perosnal interests</a>
     </div>
 
     <div class="body">
-        <div class="introduction">
+        <div class="intro">
             <p>Introduction area</p>
 
             <!-- Profile image -->
-            <img src="profile_pic.jpg" alt="A cardboard box" width="400">
+            <img src="profile_pic.jpg" alt="Profile picture of Jaxon Forderberg" width="400">
 
             <!-- Name and profession -->
             <h2>Jaxon Froderberg | Professional Person</h2>
@@ -52,7 +54,7 @@
             <!-- Move section links to navigation. -->
         </div>
 
-        <div class="main-content">
+        <div class="content">
             <p>Content area</p>
 
             <!-- Unordered skills list -->
@@ -65,7 +67,7 @@
                 <li>Expert craftsman with all things cardboard</li>
             </ul>
         </div>
-        
+
     </div>
     
     <!-- Includes at least 1 section link (fragment) to another section/page in your website -->
