feat[.body]: Added summary section from summary.html to the content area of the webpage.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,49 @@
                 <li>Basic project management and leadership skills</li>
                 <li>Expert craftsman with all things cardboard</li>
             </ul>
+
+            <!-- Career Summary section -->
+            <section id="summary">
+                <!-- This is the summary page -->
+                <h2>Career summary and work experience</h2>
+
+                <table>
+                    <caption><strong>Work Experience</strong></caption>
+                    <tr>
+                        <th>Work Experience</th>
+                        <th>Role</th>
+                        <th>Acheivements</th>
+                        <th>Date</th>
+                    </tr>
+
+                    <tr>
+                        <td>Gonzaga University IT Services</td>
+                        <td>Student Support Specialist</td>
+                        <td>Provided technical assistance and advice to over 500 students and faculty in 
+                            2 years by resetting accounts and troubleshooting software bugs and glitches.
+                        </td>
+                        <td>2022-present</td>
+                    </tr>
+
+                    <tr>
+                        <td>Gonzaga Study Abroad Program</td>
+                        <td>Pensione Representative / group supervisor</td>
+                        <td>Monitored and coordinated 33 student-residents through weekly check-in forms
+                            in order to ensure the coordination and safety of all residents during travel.
+                        </td>
+                        <td>2024</td>
+                    </tr>
+
+                    <tr>
+                        <td>Gonzaga Association of Computing Machinery</td>
+                        <td>Promotional Art designer / Volunteer</td>
+                        <td>Designed several awards and works used in annual Hackathons and Cyber security
+                            cups hosted by the ACM since 2021 to promote the event and increase public interest.
+                        </td>
+                        <td>2021-present</td>
+                    </tr>
+                </table>
+            </section>
         </div>
 
     </div>
