feat[.body]: Changed career summary section to a <div> element, and updated the corrosponding link in the navigation div to link to it.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="box.jpeg" alt="Profile page logo" width="40">
 
         <!-- Navigation links -->
-        <a href="summary.html" target="_self">My career summary</a>
+        <a href="#summary">My career summary</a>
         <a href="qualifications.html" target="_self">My qualifications and education</a>
         <a href="interests.html" target="_self">My perosnal interests</a>
     </div>
@@ -68,7 +68,7 @@
             </ul>
 
             <!-- Career Summary section -->
-            <section id="summary">
+            <div id="summary">
                 <!-- This is the summary page -->
                 <h2>Career summary and work experience</h2>
 
@@ -108,7 +108,9 @@
                         <td>2021-present</td>
                     </tr>
                 </table>
-            </section>
+            </div>
+            <!-- End of summary. -->
+
         </div>
 
     </div>
