feat[div.summary]: Removed redundant caption element from career summary table.

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             </ul>
 
             <!-- Career Summary section -->
-            <div id="summary">
+            <div id="summary" class="summary">
                 <!-- This is the summary page -->
                 <h2>Career summary and work experience</h2>
 
                 <table>
-                    <caption><strong>Work Experience</strong></caption>
+                    <!-- <caption><strong>Work Experience</strong></caption> -->
                     <tr>
                         <th>Work Experience</th>
                         <th>Role</th>
