feat[div.content]: I have added the qualifications section from qualifications.html to the corrosponding <div> in the main content div, and adjusted the navigation link to match.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!-- Navigation links -->
         <a href="#summary">My career summary</a>
-        <a href="qualifications.html" target="_self">My qualifications and education</a>
+        <a href="#qualifications">My qualifications and education</a>
         <a href="interests.html" target="_self">My perosnal interests</a>
     </div>
 
@@ -110,6 +110,55 @@
                 </table>
             </div>
             <!-- End of summary. -->
+
+            <div id="qualifications" class="qualifications">
+                <h2>Education and qualifications</h2>
+
+                <table>
+                    <caption><strong>Educational Experience:</strong></caption>
+                    <tr>
+                        <th>Institution</th>
+                        <th>Roles</th>
+                        <th>Acheivements</th>
+                    </tr>
+
+                    <tr>
+                        <td>Gonzaga University</td>
+                        <td>Undergraduate, Bachelor of Arts in computer science</td>
+                        <td>GPA: 3.86 | President List: Spring 2024 | Honors award: June 2022</td>
+                    </tr>
+                </table>
+                <br>
+
+                <table>
+                    <caption><strong>Work Qualifications:</strong></caption>
+                    <tr>
+                        <th>Profession</th>
+                        <th>Roles</th>
+                        <th>Duties</th>
+                    </tr>
+
+                    <tr>
+                        <td>Gonzaga University IT</td>
+                        <td>Student Support / student employee</td>
+                        <td>Duties included IT technical support for students and staff, as well as network setup and repair</td>
+                    </tr>
+
+                    <tr>
+                        <td>Inland Northwest Opera </td>
+                        <td>Physical labor / tech assist</td>
+                        <td>Worked as a general hauler/stage assembly and disassembly worker</td>
+                    </tr>
+
+                    <tr>
+                        <td>Spokane Indians	Baseball team</td>
+                        <td>Food preparation cook</td>
+                        <td>Duties included preparing food items to be sold at concession stands,
+                            as well as ensuring that all products were cooked and packaged correctly.</td>
+                    </tr>
+                </table>
+            </div>
+            <!-- End of qualifications -->
 
         </div>
 
