--- a/index.html
+++ b/index.html
@@ -160,6 +160,41 @@
             </div>
             <!-- End of qualifications -->
 
+            <div id="interests" class="interests">
+                <h2>interests and Hobbies</h2>
+
+                <ol>
+                    <li>All things cardboard and crafts!
+                        <p>I personally believe there is nothing you can't accomplish with a bit of glue, corrigated sheetpaper, and creativity.</p>
+                        <table>
+                            <tr>
+                                <td><a href="https://www.boxwars.com/" target="_blank"><img src="box_wars.jpeg" alt="Boxwars logo" width="200"></a></td>
+                            </tr>
+                        </table>
+                    </li>
+
+                    <li>Laserdisc players and other vintage tech
+                        <p>Endless facination with older tech and their history. They just don't make them like they used to.</p>
+                        <img src="laserdisk.jpeg" alt="A laseredisk player" width="400">
+                    </li>
+
+                    <li>Indie games
+                        <p>As a lifelong superfan of all games and an aspiring game-maker, nothing inspires me more than other creative projects</p>
+                        <img src="knight.jpeg" alt="Hollow Knight videogame cover" width="200">
+                    </li>
+
+                    <li>Drawing and sketching
+                        <p>My number one hobby and talent. You'll often find me doodling in the margins of all my notes!</p>
+                        <img src="sketch.jpg" alt="A 2-point perspective sketch by me!" width="400">
+                    </li>
+
+                    <li>Animation
+                        <p>No movies have captivated me in the same way the picture's like studio Ghibli's can.</p>
+                        <img src="spirit.jpeg" alt="Movie cover for Studio Ghibli film Spirited Away" width="200">
+                    </li>
+                </ol>
+            </div>
+
         </div>
 
     </div>
