feat[div.content]: Removed the table element from the first listed interest.

--- a/index.html
+++ b/index.html
@@ -166,11 +166,7 @@
                 <ol>
                     <li>All things cardboard and crafts!
                         <p>I personally believe there is nothing you can't accomplish with a bit of glue, corrigated sheetpaper, and creativity.</p>
-                        <table>
-                            <tr>
-                                <td><a href="https://www.boxwars.com/" target="_blank"><img src="box_wars.jpeg" alt="Boxwars logo" width="200"></a></td>
-                            </tr>
-                        </table>
+                        <a href="https://www.boxwars.com/" target="_blank"><img src="box_wars.jpeg" alt="Boxwars logo" width="200"></a>
                     </li>
 
                     <li>Laserdisc players and other vintage tech
