--- a/index.html
+++ b/index.html
@@ -18,40 +18,40 @@
 <body>
 
     <div class="nav">
-        <p>Navigation area</p>
-
         <!-- Add CSS-styled logo -->
         <img src="box.jpeg" alt="Profile page logo" width="40">
 
         <!-- Navigation links -->
+        <a href="#intro">Introduction</a>
         <a href="#summary">My career summary</a>
         <a href="#qualifications">My qualifications and education</a>
-        <a href="interests.html" target="_self">My perosnal interests</a>
+        <a href="#interests">My perosnal interests</a>
     </div>
 
     <div class="body">
         <div class="intro">
-            <p>Introduction area</p>
+            <section id="intro">
 
-            <!-- Profile image -->
-            <img src="profile_pic.jpg" alt="Profile picture of Jaxon Forderberg" width="400">
+                <!-- Profile image -->
+                <img src="profile_pic.jpg" alt="Profile picture of Jaxon Forderberg" width="400">
 
-            <!-- Name and profession -->
-            <h2>Jaxon Froderberg | Professional Person</h2>
+                <!-- Name and profession -->
+                <h2>Jaxon Froderberg | Professional Person</h2>
 
-            <!-- Summary paragraph. distinctly seperate -->
-            <p>
-                Hello Internet! My name is Jaxon. Lemmie tell you a bit more about myself:
+                <!-- Summary paragraph. distinctly seperate -->
+                <p>
+                    Hello Internet! My name is Jaxon. Lemmie tell you a bit more about myself:
 
-                Growing up, I've been an avid fan in all things art, comprized in endless
-                hours of doodling in sketchbooks to making full-on videogames. Along the way
-                I've picked up plenty of skills for coding, designing interfaces,
-                managing group projects, and other talents that will make me an invaluble
-                asset to your team.
-            </p>
+                    Growing up, I've been an avid fan in all things art, comprized in endless
+                    hours of doodling in sketchbooks to making full-on videogames. Along the way
+                    I've picked up plenty of skills for coding, designing interfaces,
+                    managing group projects, and other talents that will make me an invaluble
+                    asset to your team.
+                </p>
 
-            <!-- Move unordered skills list to main area. -->
-            <!-- Move section links to navigation. -->
+                <!-- Move unordered skills list to main area. -->
+                <!-- Move section links to navigation. -->
+            </section>
         </div>
 
         <div class="content">
