feat[body]: Removed unneeded temp. titles for sections and adjusted background colors.

--- a/index.html
+++ b/index.html
@@ -17,46 +17,41 @@
 
 <body>
 
-    <div class="nav">
+    <nav class="nav">
         <!-- Add CSS-styled logo -->
-        <img src="box.jpeg" alt="Profile page logo" width="40">
+        <img src="box.jpeg" alt="Profile page logo" width="80">
 
         <!-- Navigation links -->
         <a href="#intro">Introduction</a>
         <a href="#summary">My career summary</a>
         <a href="#qualifications">My qualifications and education</a>
         <a href="#interests">My perosnal interests</a>
-    </div>
+    </nav>
 
     <div class="body">
-        <div class="intro">
-            <section id="intro">
+        <div id="intro" class="intro">
+            <!-- Profile image -->
+            <img src="profile_pic.jpg" alt="Profile picture of Jaxon Forderberg" width="400">
 
-                <!-- Profile image -->
-                <img src="profile_pic.jpg" alt="Profile picture of Jaxon Forderberg" width="400">
+            <!-- Name and profession -->
+            <h2>Jaxon Froderberg | Professional Person</h2>
 
-                <!-- Name and profession -->
-                <h2>Jaxon Froderberg | Professional Person</h2>
+            <!-- Summary paragraph. distinctly seperate -->
+            <p>
+                Hello Internet! My name is Jaxon. Lemmie tell you a bit more about myself:
 
-                <!-- Summary paragraph. distinctly seperate -->
-                <p>
-                    Hello Internet! My name is Jaxon. Lemmie tell you a bit more about myself:
+                Growing up, I've been an avid fan in all things art, comprized in endless
+                hours of doodling in sketchbooks to making full-on videogames. Along the way
+                I've picked up plenty of skills for coding, designing interfaces,
+                managing group projects, and other talents that will make me an invaluble
+                asset to your team.
+            </p>
 
-                    Growing up, I've been an avid fan in all things art, comprized in endless
-                    hours of doodling in sketchbooks to making full-on videogames. Along the way
-                    I've picked up plenty of skills for coding, designing interfaces,
-                    managing group projects, and other talents that will make me an invaluble
-                    asset to your team.
-                </p>
-
-                <!-- Move unordered skills list to main area. -->
-                <!-- Move section links to navigation. -->
-            </section>
+            <!-- Move unordered skills list to main area. -->
+            <!-- Move section links to navigation. -->
         </div>
 
         <div class="content">
-            <p>Content area</p>
-
             <!-- Unordered skills list -->
             <p>Here are a few of my core skills:</p>
             <ul>
