style[intro/nav]: Adjusted css stylesheet to meet rubric requirements.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav class="nav">
         <!-- Add CSS-styled logo -->
-        <img src="box.jpeg" alt="Profile page logo" width="80">
+        <img src="propeller.jpg" alt="Profile page logo">
 
         <!-- Navigation links -->
         <a href="#intro">Introduction</a>
@@ -31,7 +31,7 @@
     <div class="body">
         <div id="intro" class="intro">
             <!-- Profile image -->
-            <img src="profile_pic.jpg" alt="Profile picture of Jaxon Forderberg" width="400">
+            <img src="profile_pic.jpg" alt="Profile picture of Jaxon Forderberg">
 
             <!-- Name and profession -->
             <h2>Jaxon Froderberg | Professional Person</h2>
