style[body]: Reformatted colors for most table elements.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <h2>Jaxon Froderberg | Professional Person</h2>
 
             <!-- Summary paragraph. distinctly seperate -->
+            <p class="bar"></p>
             <p>
                 Hello Internet! My name is Jaxon. Lemmie tell you a bit more about myself:
 
@@ -46,6 +47,7 @@
                 managing group projects, and other talents that will make me an invaluble
                 asset to your team.
             </p>
+            <p class="bar"></p>
 
             <!-- Move unordered skills list to main area. -->
             <!-- Move section links to navigation. -->
