--- a/index.html
+++ b/index.html
@@ -54,15 +54,6 @@
         </div>
 
         <div class="content">
-            <!-- Unordered skills list -->
-            <p>Here are a few of my core skills:</p>
-            <ul>
-                <li>Professional sketchwork and drawing skills for mockups and designwork</li>
-                <li>Proficiency with 3D modeling software including Blender and Tinkercad</li>
-                <li>Experience with assorted powertools and other construction tools./li>
-                <li>Basic project management and leadership skills</li>
-                <li>Expert craftsman with all things cardboard</li>
-            </ul>
 
             <!-- Career Summary section -->
             <div id="summary" class="summary">
@@ -107,6 +98,16 @@
                 </table>
             </div>
             <!-- End of summary. -->
+
+            <!-- Unordered skills list -->
+            <h2>Here are a few of my core skills:</h2>
+            <ul>
+                <li>Professional sketchwork and drawing skills for mockups and designwork</li>
+                <li>Proficiency with 3D modeling software including Blender and Tinkercad</li>
+                <li>Experience with assorted powertools and other construction tools./li>
+                <li>Basic project management and leadership skills</li>
+                <li>Expert craftsman with all things cardboard</li>
+            </ul>
 
             <div id="qualifications" class="qualifications">
                 <h2>Education and qualifications</h2>
@@ -168,25 +169,25 @@
                     </li>
 
                     <li>
-                        <img src="laserdisk.jpeg" alt="A laseredisk player" width="400">
+                        <img src="laserdisk.jpeg" alt="A laseredisk player">
                         <p>Laserdisc players and other vintage tech</p>
                         <p>Endless facination with older tech and their history. They just don't make them like they used to.</p> 
                     </li>
 
                     <li>
-                        <img src="knight.jpeg" alt="Hollow Knight videogame cover" width="200">
+                        <img src="knight.jpeg" alt="Hollow Knight videogame cover">
                         <p>Indie games</p>
                         <p>As a lifelong superfan of all games and an aspiring game-maker, nothing inspires me more than other creative projects</p>
                     </li>
 
                     <li>
-                         <img src="sketch.jpg" alt="A 2-point perspective sketch by me!" width="400">
+                         <img src="sketch.jpg" alt="A 2-point perspective sketch by me!">
                         <p>Drawing and sketching</p>
                         <p>My number one hobby and talent. You'll often find me doodling in the margins of all my notes!</p>
                     </li>
 
                     <li>
-                        <img src="spirit.jpeg" alt="Movie cover for Studio Ghibli film Spirited Away" width="200">
+                        <img src="spirit.jpeg" alt="Movie cover for Studio Ghibli film Spirited Away">
                         <p>Animation</p>
                         <p>No movies have captivated me in the same way the picture's like studio Ghibli's can.</p>
                     </li>
